Implemented Page Object Model using Selenium Page Factory

--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -1,4 +1,4 @@
 url=https://tutorialsninja.com/demo/
-browserName=firefox
+browserName=edge
 validEmail=rakiraja7751841655@gmail.com
 validPassword=soumya@123
