code changes till 17 march 2024

--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -1,4 +1,6 @@
 url=https://tutorialsninja.com/demo/
-browserName=edge
+browserName=chrome_lambdatest
+#browserName=chrome
+
 validEmail=rakiraja7751841655@gmail.com
 validPassword=soumya@123
